refactor(movies): separate public and admin movie DTOs